--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -8,7 +8,7 @@ gris = #787878
 gris2 = #2B313B
 naranja = #ec5220
 azul = #446a8d
-celeste = #00aeef
+celeste = red //#00aeef
 verde = #8dc63f
 azul_oscuro = rgba(44, 50, 59, 1)
 
@@ -485,7 +485,7 @@ button,input[type="submit"]
 
 		.icon-avotz
 			font-size 3em
-			color #B6CDE9
+			color red //#B6CDE9
 			vertical-align middle
 			padding-left 5px
 
