fix resposive things

--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -1,3 +1,13 @@
+@media only screen and (min-width: 640px)
+	.benefits
+		.benefit
+			&-img
+				display block
+			&-list
+				margin-left 6em
+				ul
+					margin-left 45px
+
 @media only screen and (min-width: 900px)
 
 	.btn-menu
@@ -48,6 +58,12 @@
 
 		.inner
 			width 750px
+	.main
+		.rightSection
+			width 34%
+			margin-left 1em
+		.leftSection
+			width 64%
 	.home
 		&-item
 			width 45%
@@ -69,7 +85,7 @@
 			height 400px
 			float left
 			margin-right 20px
-		
+
 		&-content
 			float left
 			width 45%
@@ -107,7 +123,7 @@
 			width 640px
 
 
-@media only screen and (max-width: 320px)
+@media only screen and (max-width: 460px)
 	.banner
 		&-info
 			padding 2em
