--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -705,7 +705,7 @@ input[type="submit"] {
   position: absolute;
   left: 0;
   right: 0;
-  top: 84px;
+  top: 40px;
   background: #446a8d;
   z-index: 999;
   text-align: center;
@@ -834,11 +834,10 @@ input[type="submit"] {
 .main .rightSection {
   padding: 1em;
   color: #000;
-  width: 34%;
-  margin-left: 0.5em;
+  width: 100%;
 }
 .main .leftSection {
-  width: 65%;
+  width: 100%;
 }
 .bgid-101 .main {
   min-height: 0;
@@ -872,11 +871,15 @@ input[type="submit"] {
   min-height: 270px;
 }
 .benefits .benefit-img {
+  display: none;
   position: absolute;
   left: 0;
 }
 .benefits .benefit-list {
-  margin-left: 6em;
+  margin-left: 0;
+}
+.benefits .benefit-list ul {
+  margin-left: 20px;
 }
 .contact-info {
   position: static;
@@ -1132,6 +1135,17 @@ input[type="submit"] {
   vertical-align: middle;
   padding-left: 5px;
 }
+@media only screen and (min-width: 640px) {
+  .benefits .benefit-img {
+    display: block;
+  }
+  .benefits .benefit-list {
+    margin-left: 6em;
+  }
+  .benefits .benefit-list ul {
+    margin-left: 45px;
+  }
+}
 @media only screen and (min-width: 900px) {
   .btn-menu {
     display: none;
@@ -1191,6 +1205,13 @@ input[type="submit"] {
   .testimonials .inner {
     width: 750px;
   }
+  .main .rightSection {
+    width: 34%;
+    margin-left: 1em;
+  }
+  .main .leftSection {
+    width: 64%;
+  }
   .home-item {
     width: 45%;
   }
@@ -1246,7 +1267,7 @@ input[type="submit"] {
     width: 640px;
   }
 }
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 460px) {
   .banner-info {
     padding: 2em;
   }
