--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -152,7 +152,7 @@ button,input[type="submit"]
 	position absolute
 	left 0
 	right 0
-	top 84px
+	top 40px
 	background azul
 	z-index 999
 	text-align center
@@ -282,10 +282,10 @@ button,input[type="submit"]
 	.rightSection
 		padding 1em
 		color #000
-		width 34%
-		margin-left .5em
+		width 100%
+
 	.leftSection
-		width 65%
+		width 100%
 
 .bgid-101
 	.main
@@ -312,10 +312,13 @@ button,input[type="submit"]
 		min-height 270px
 
 		&-img
+			display none
 			position absolute
 			left 0
 		&-list
-			margin-left 6em
+			margin-left 0
+			ul
+				margin-left 20px
 .contact
 	&-info
 		position static
