--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -328,7 +328,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .header-contactCall .icon-phone{color:#fff;display:inline-block;font-size:1em;vertical-align:middle;margin-right:.5em}
 .header-contactCall p{display:inline-block;margin:0}
 .btn-menu{background:0 0;border:0;font-size:2em;display:block;position:absolute;right:0;top:25px;outline:0;height:34px;width:40px}
-.menu{display:none;position:absolute;left:0;right:0;top:84px;background:#446a8d;z-index:999;text-align:center}
+.menu{display:none;position:absolute;left:0;right:0;top:40px;background:#446a8d;z-index:999;text-align:center}
 .menu ul{list-style:none}
 .menu .green:hover{color:#8dc63f!important}
 .menu .orange:hover{color:#ec5220!important}
@@ -355,15 +355,16 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .main{padding:25px 0;min-height:650px}
 .main ul{margin-left:45px;margin-bottom:25px}
 .main .leftSection,.main .rightSection{display:inline-block;vertical-align:top}
-.main .rightSection{padding:1em;color:#000;width:34%;margin-left:.5em}
-.main .leftSection{width:65%}
+.main .rightSection{padding:1em;color:#000;width:100%}
+.main .leftSection{width:100%}
 .bgid-101 .main{min-height:0}
 .bgid-102 .projects{margin-top:-25px}
 .green-build{overflow:hidden}
 .benefits-items{display:block;-webkit-box-lines:multiple;-moz-box-lines:multiple;-o-box-lines:multiple;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-moz-box-pack:justify;-o-box-pack:justify;-ms-flex-pack:justify;-webkit-justify-content:space-between;justify-content:space-between}
 .benefits .benefit{display:block;vertical-align:top;position:relative;margin-bottom:1em;min-height:270px}
-.benefits .benefit-img{position:absolute;left:0}
-.benefits .benefit-list{margin-left:6em}
+.benefits .benefit-img{display:none;position:absolute;left:0}
+.benefits .benefit-list{margin-left:0}
+.benefits .benefit-list ul{margin-left:20px}
 .contact-info{position:static;right:2em;bottom:2em}
 .b2j_contact{background:#fff!important}
 .home{text-align:center}
@@ -398,6 +399,9 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .footer-logo{float:left;margin-top:10px}
 .footer-copyright{color:#b6cde9;float:right;font-size:13px}
 .footer-copyright .icon-avotz{font-size:3em;color:#b6cde9;vertical-align:middle;padding-left:5px}
+@media only screen and (min-width:640px){.benefits .benefit-img{display:block}
+.benefits .benefit-list{margin-left:6em}
+.benefits .benefit-list ul{margin-left:45px}}
 @media only screen and (min-width:900px){.btn-menu{display:none}
 .menu{float:left;position:static;background:0 0;display:block!important}
 .menu li{display:inline-block;vertical-align:top;line-height:84px;position:relative}
@@ -411,6 +415,8 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .contact-info{position:absolute}
 .testimonials{background:#f4f4f4;padding:2em 0}
 .testimonials .inner{width:750px}
+.main .rightSection{width:34%;margin-left:1em}
+.main .leftSection{width:64%}
 .home-item{width:45%}
 .products-item{width:25%;float:left}
 .projects-item{width:33.3333333%;float:left}
@@ -425,6 +431,6 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .banner-info.left{left:0}
 .banner-info.right{right:0}
 .project-image{width:640px}}
-@media only screen and (max-width:320px){.banner-info{padding:2em}
+@media only screen and (max-width:460px){.banner-info{padding:2em}
 .banner-title{font-size:2.5em}
 .banner-subtitle{font-size:2em}}
