fix banner 480 px

--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -125,6 +125,10 @@
 
 @media only screen and (max-width: 460px)
 	.banner
+		.inner
+			height 300px
+		&-slide
+			height 300px
 		&-info
 			padding 2em
 
