--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -1268,6 +1268,12 @@ input[type="submit"] {
   }
 }
 @media only screen and (max-width: 460px) {
+  .banner .inner {
+    height: 300px;
+  }
+  .banner-slide {
+    height: 300px;
+  }
   .banner-info {
     padding: 2em;
   }
