--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -431,6 +431,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .banner-info.left{left:0}
 .banner-info.right{right:0}
 .project-image{width:640px}}
-@media only screen and (max-width:460px){.banner-info{padding:2em}
+@media only screen and (max-width:460px){.banner .inner,.banner-slide{height:300px}
+.banner-info{padding:2em}
 .banner-title{font-size:2.5em}
 .banner-subtitle{font-size:2em}}
