--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -5,8 +5,10 @@
 				display block
 			&-list
 				margin-left 6em
-				ul
-					margin-left 45px
+				
+	.main
+		ul
+			margin-left 45px
 
 @media only screen and (min-width: 900px)
 
