--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -5,7 +5,7 @@
 				display block
 			&-list
 				margin-left 6em
-				
+
 	.main
 		ul
 			margin-left 45px
@@ -84,7 +84,7 @@
 		.pull-left
 		&-image
 			width 540px
-			height 400px
+			//height 400px
 			float left
 			margin-right 20px
 
