--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -1079,6 +1079,8 @@ input[type="submit"] {
 }
 .project {
   text-align: center;
+/*.cycle-pager-active
+		border 1px solid red*/
 }
 .project-detail {
   clear: both;
@@ -1086,7 +1088,7 @@ input[type="submit"] {
 }
 .project-image {
   width: 100%;
-  height: 400px;
+  min-height: 400px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -1106,11 +1108,47 @@ input[type="submit"] {
   font-size: 1.5em;
   vertical-align: middle;
 }
-.project-gallery-item {
+.project-gallery {
+  height: 98px;
+  margin-top: 1em;
+}
+.project-gallery img {
+  width: auto;
+  cursor: pointer;
+  float: left;
+}
+.project-item {
   display: inline-block;
   width: 130px;
   height: 88px;
   padding: 0.5em;
+}
+.project .cycle-prev,
+.project .cycle-next {
+  font-size: 2em;
+  color: #fff;
+  background: rgba(0,0,0,0.4);
+  padding: 0.5em;
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  z-index: 200;
+}
+.project .cycle-prev:hover,
+.project .cycle-next:hover {
+  background: rgba(0,0,0,0.8);
+}
+.project .cycle-prev {
+  left: 0;
+}
+.project .cycle-next {
+  right: 0;
+}
+.project .thumbnails-wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 .footer {
   background: #2c323b;
@@ -1226,7 +1264,6 @@ input[type="submit"] {
   .project .pull-left,
   .project-image {
     width: 540px;
-    height: 400px;
     float: left;
     margin-right: 20px;
   }
