--- a/templates/frame/assets/css/main.css
+++ b/templates/frame/assets/css/main.css
@@ -1079,8 +1079,6 @@ input[type="submit"] {
 }
 .project {
   text-align: center;
-/*.cycle-pager-active
-		border 1px solid red*/
 }
 .project-detail {
   clear: both;
@@ -1114,8 +1112,6 @@ input[type="submit"] {
 }
 .project-gallery img {
   width: auto;
-  cursor: pointer;
-  float: left;
 }
 .project-item {
   display: inline-block;
@@ -1144,11 +1140,36 @@ input[type="submit"] {
 .project .cycle-next {
   right: 0;
 }
+.project .cycle-pager-active:after {
+  background: rgba(0,0,0,0) !important;
+}
 .project .thumbnails-wrapper {
   position: relative;
   height: 100%;
   width: 100%;
   overflow: hidden;
+}
+.project .thumbnail {
+  display: block;
+  cursor: pointer;
+  float: left;
+  position: relative;
+}
+.project .thumbnail:after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 90%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.5);
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .footer {
   background: #2c323b;
