--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -394,13 +394,16 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .project-content{margin-bottom:20px}
 .project-share a{display:inline-block;padding:.5em;color:#787878;font-size:1.5em;vertical-align:middle}
 .project-gallery{height:98px;margin-top:1em}
-.project-gallery img{width:auto;cursor:pointer;float:left}
+.project-gallery img{width:auto}
 .project-item{display:inline-block;width:130px;height:88px;padding:.5em}
 .project .cycle-next,.project .cycle-prev{font-size:2em;color:#fff;background:rgba(0,0,0,.4);padding:.5em;cursor:pointer;position:absolute;top:40%;z-index:200}
 .project .cycle-next:hover,.project .cycle-prev:hover{background:rgba(0,0,0,.8)}
 .project .cycle-prev{left:0}
 .project .cycle-next{right:0}
+.project .cycle-pager-active:after{background:0 0!important}
 .project .thumbnails-wrapper{position:relative;height:100%;width:100%;overflow:hidden}
+.project .thumbnail{display:block;cursor:pointer;float:left;position:relative}
+.project .thumbnail:after{position:absolute;content:'';width:100%;height:90%;left:0;right:0;top:0;bottom:0;background:rgba(0,0,0,.5);-webkit-transition:all .3s ease;-moz-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;transition:all .3s ease}
 .footer{background:#2c323b;overflow:hidden;padding:1em 0}
 .footer-logo{float:left;margin-top:10px}
 .footer-copyright{color:#b6cde9;float:right;font-size:13px}
