--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -1,10 +1,12 @@
 @media only screen and (min-width: 640px)
 	.benefits
-		.benefit
-			&-img
-				display block
-			&-list
-				margin-left 6em
+		&-tabs
+			ul
+				float right
+					
+		&-img
+			display block 
+			float left
 
 	.main
 		ul
@@ -42,12 +44,12 @@
 						background rgba(44, 50, 59, 1)
 				&:last-child
 					border none
-	.benefits
+	/*.benefits
 		&-items
 			display flex
 		.benefit
 			width 45%
-			display inline-block
+			display inline-block*/
 	.contact
 		&-info
 			position absolute
