--- a/templates/frame/assets/stylus/main.css
+++ b/templates/frame/assets/stylus/main.css
@@ -88,251 +88,6 @@ dfn {
 }
 hr {
   -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-p,
-pre {
-  margin: 1em 0;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
-  font-size: 1em;
-}
-pre {
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-q {
-  quotes: none;
-}
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-dl,
-menu,
-ol,
-ul {
-  margin: 1em 0;
-}
-dd {
-  margin: 0 0 0 40px;
-}
-menu,
-ol,
-ul {
-  padding: 0 0 0 40px;
-}
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
-}
-img {
-  border: 0; /* 1 */
-  -ms-interpolation-mode: bicubic; /* 2 */
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-figure {
-  margin: 0;
-}
-form {
-  margin: 0;
-}
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-legend {
-  border: 0; /* 1 */
-  padding: 0;
-  white-space: normal; /* 2 */
-  *margin-left: -7px;
-/* 3 */
-}
-button,
-input,
-select,
-textarea {
-  font-size: 100%; /* 1 */
-  margin: 0; /* 2 */
-  vertical-align: baseline; /* 3 */
-  *vertical-align: middle;
-/* 3 */
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
-  *overflow: visible;
-/* 4 */
-}
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-  *height: 13px;
-/* 3 */
-  *width: 13px;
-/* 3 */
-}
-input[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-textarea {
-  overflow: auto; /* 1 */
-  vertical-align: top; /* 2 */
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-/* normalize.css v1.1.3 | MIT License | git.io/normalize */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  font-size: 100%; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-html,
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
-}
-body {
-  margin: 0;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-h2 {
-  font-size: 1.5em;
-  margin: 0.83em 0;
-}
-h3 {
-  font-size: 1.17em;
-  margin: 1em 0;
-}
-h4 {
-  font-size: 1em;
-  margin: 1.33em 0;
-}
-h5 {
-  font-size: 0.83em;
-  margin: 1.67em 0;
-}
-h6 {
-  font-size: 0.67em;
-  margin: 2.33em 0;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-strong {
-  font-weight: bold;
-}
-blockquote {
-  margin: 1em 40px;
-}
-dfn {
-  font-style: italic;
-}
-hr {
-  -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -848,9 +603,6 @@ input[type="submit"] {
 .green-build {
   overflow: hidden;
 }
-.benefits-tabs {
-  overflow: hidden;
-}
 .benefits-tabs ul {
   margin: 0;
   padding: 0;
@@ -859,70 +611,36 @@ input[type="submit"] {
 .benefits-tabs li {
   display: inline-block;
   vertical-align: top;
-  background-color: #446a8d;
-  cursor: pointer;
-  color: #fff;
-  padding: 0.3em;
-  margin-bottom: 0.5em;
 }
-.benefits-tabs li.active,
-.benefits-tabs li:hover {
-  background-color: #00aeef;
+.benefits-items {
+  display: block;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
 }
-.benefits-container {
+.benefits .benefit {
+  display: block;
+  vertical-align: top;
   position: relative;
-  padding-top: 1em;
-  min-height: 360px;
+  margin-bottom: 1em;
+  min-height: 270px;
 }
-.benefits-item {
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
+.benefits .benefit-img {
   display: none;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  position: absolute;
+  left: 0;
 }
-.benefits-item.is-visible {
-  display: block !important;
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
-}
-.benefits h3 {
-  font-weight: bold;
-}
-.benefits-img {
-  display: none;
-  max-width: 540px;
-  width: 50%;
-  margin-right: 3em;
-}
-.partners {
-  margin-top: 3em;
-  text-align: center;
-}
-.partners-title {
-  text-align: center;
-}
-.partners-img {
-  filter: grayscale(90%);
-  -webkit-filter: grayscale(90%);
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-.partners-img:hover {
-  filter: grayscale(0%);
-  -webkit-filter: grayscale(0%);
-}
-.partners-item {
-  display: inline-block;
-  padding: 0.3em;
+.benefits .benefit-list {
+  margin-left: 0;
 }
 .contact-info {
   position: static;
@@ -1238,12 +956,11 @@ input[type="submit"] {
   padding-left: 5px;
 }
 @media only screen and (min-width: 640px) {
-  .benefits-tabs ul {
-    float: right;
-  }
-  .benefits-img {
+  .benefits .benefit-img {
     display: block;
-    float: left;
+  }
+  .benefits .benefit-list {
+    margin-left: 6em;
   }
   .main ul {
     margin-left: 45px;
@@ -1285,6 +1002,18 @@ input[type="submit"] {
   }
   .menu .nav-child li:last-child {
     border: none;
+  }
+  .benefits-items {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+  }
+  .benefits .benefit {
+    width: 45%;
+    display: inline-block;
   }
   .contact-info {
     position: absolute;
