--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -330,6 +330,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .btn-menu{background:0 0;border:0;font-size:2em;display:block;position:absolute;right:0;top:25px;outline:0;height:34px;width:40px}
 .menu{display:none;position:absolute;left:0;right:0;top:40px;background:#446a8d;z-index:999;text-align:center}
 .menu ul{list-style:none}
+.menu .celeste:hover{color:#00aeef!important}
 .menu .green:hover{color:#8dc63f!important}
 .menu .orange:hover{color:#ec5220!important}
 .menu li{display:block;line-height:40px}
@@ -413,13 +414,34 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .project .thumbnails-wrapper{position:relative;height:100%;width:100%;overflow:hidden}
 .project .thumbnail{display:block;cursor:pointer;float:left;position:relative}
 .project .thumbnail:after{position:absolute;content:'';width:100%;height:90%;left:0;right:0;top:0;bottom:0;background:rgba(0,0,0,.5);-webkit-transition:all .3s ease;-moz-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;transition:all .3s ease}
+.team{margin-top:1em}
+.team-title{text-align:center;padding-bottom:.5em}
+.team-img{-webkit-border-radius:50%;border-radius:50%;width:168px;filter:grayscale(100%);-webkit-filter:grayscale(100%);border:3px solid #787878}
+.team-readmore{background-color:#fff;padding:.5em;display:none;color:#00aeef;margin-top:2em;cursor:pointer}
+.team-readmore.is-visible:after{display:none}
+.team-readmore.is-visible:before{display:block}
+.team-readmore:after{content:'Read More';display:block;text-align:center}
+.team-readmore:before{content:'Read Less';text-align:center;display:none}
+.team-readmore:focus{outline:0}
+.team-person{position:relative;text-align:center;border-bottom:1px dotted #707070;padding:1em 0}
+.team-name{font-weight:700;text-align:center}
+.team-description{text-align:left}
 .footer{background:#2c323b;overflow:hidden;padding:1em 0}
-.footer-logo{float:left;margin-top:10px}
-.footer-copyright{color:#b6cde9;float:right;font-size:13px}
+.footer-logo{display:block;width:181px;margin:0 auto}
+.footer-copyright{color:#b6cde9;text-align:center;font-size:13px}
 .footer-copyright .icon-avotz{font-size:3em;color:#b6cde9;vertical-align:middle;padding-left:5px}
+.footer-links{text-align:center}
+.footer-link{display:inline-block;color:#b6cde9;padding:.3em 1em;font-size:1.3em}
+.footer-link:nth-child(1):hover{color:#00aeef}
+.footer-link:nth-child(2):hover{color:#ec5220}
+.footer-link:nth-child(3):hover{color:#8dc63f}
 @media only screen and (min-width:640px){.benefits-tabs ul{float:right}
 .benefits-img{display:block;float:left}
-.main ul{margin-left:45px}}
+.main ul{margin-left:45px}
+.footer-logo{float:left;width:auto;margin-top:10px}
+.footer-copyright{float:right;position:absolute;right:1em;top:0}
+.footer-links{text-align:center;width:500px;margin:0 auto}
+.footer-link{padding:.3em 2em}}
 @media only screen and (min-width:900px){.btn-menu{display:none}
 .menu{float:left;position:static;background:0 0;display:block!important}
 .menu li{display:inline-block;vertical-align:top;line-height:84px;position:relative}
@@ -428,6 +450,12 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .menu .nav-child li a{display:block;padding:.5em}
 .menu .nav-child li a:hover{background:#2c323b}
 .menu .nav-child li:last-child{border:none}
+.team{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-pack:justify;-moz-box-pack:justify;-o-box-pack:justify;-ms-flex-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-box-lines:multiple;-moz-box-lines:multiple;-o-box-lines:multiple;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap}
+.team-person{min-height:280px;width:45%}
+.team-readmore{display:block}
+.team-img{float:left;margin-right:1em;margin-top:2em}
+.team-description{height:190px;overflow:hidden;-webkit-transition:all .3s ease;-moz-transition:all .3s ease;-o-transition:all .3s ease;-ms-transition:all .3s ease;transition:all .3s ease}
+.team-description.is-visible{height:auto;overflow:visible}
 .contact-info{position:absolute}
 .testimonials{background:#f4f4f4;padding:2em 0}
 .testimonials .inner{width:750px}
@@ -438,15 +466,15 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .projects-item{width:33.3333333%;float:left}
 .project{text-align:left}
 .project .pull-left,.project-image{width:540px;float:left;margin-right:20px}
-.project-content{float:left;width:45%}
-.project-share{position:absolute;right:0}}
+.project-content{float:left;width:45%}}
 @media only screen and (min-width:1024px){.header-contactCall{display:block}
 .project-image{width:440px}}
 @media only screen and (min-width:1200px){.inner{padding:0}
 .header-logo{margin-right:20px}
 .banner-info.left{left:0}
 .banner-info.right{right:0}
-.project-image{width:640px}}
+.project-image{width:640px}
+.footer-copyright{right:0}}
 @media only screen and (max-width:460px){.banner .inner,.banner-slide{height:300px}
 .banner-info{padding:2em}
 .banner-title{font-size:2.5em}
