--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -7,6 +7,7 @@
 		&-img
 			display block 
 			float left
+	
 
 	.main
 		ul
@@ -150,6 +151,19 @@
 	.project
 		&-image
 			width 440px
+	
+	.build-smart
+	.build-green
+	
+		&-container
+			display flex
+			justify-content space-between
+			flex-wrap wrap
+			//overflow hidden
+		&-item 
+			width 48%
+			//float left
+			
 
 
 @media only screen and (min-width: 1200px)
