--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -13,6 +13,13 @@
 		ul
 			margin-left 45px
 	
+	.projects
+		&-item
+						
+			&.featured
+				h4
+					font-size 4em
+	
 		
 	.footer
 		&-logo
@@ -125,6 +132,7 @@
 		&-item
 			width 33.3333333%
 			float left
+			
 
 
 	.project
