--- a/templates/frame/css/bundle.css
+++ b/templates/frame/css/bundle.css
@@ -385,7 +385,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 .home-item h3{font-weight:500}
 .products-container,.products-items,.projects-container,.projects-items{list-style:none;overflow:hidden;clear:both}
 .products-item,.projects-item{width:100%;line-height:0;position:relative}
-.products-item.default h4,.projects-item.default h4{font-size:2em}
+.products-item.default h4,.products-item.featured h4,.projects-item.default h4,.projects-item.featured h4{font-size:2em}
 .products-link,.projects-link{display:inline-block;position:absolute;top:0;left:0;width:100%;height:100%;background:0 0;opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0);-webkit-transition:background .5s .5s,opacity .5s .5s;-moz-transition:background .5s .5s,opacity .5s .5s;-o-transition:background .5s .5s,opacity .5s .5s;-ms-transition:background .5s .5s,opacity .5s .5s;transition:background .5s .5s,opacity .5s .5s}
 .products-link:before,.projects-link:before{content:'';display:inline-block;height:100%;vertical-align:middle;margin-right:-.4em}
 .products-link:hover,.projects-link:hover{background-color:rgba(0,0,0,.5);opacity:1;-ms-filter:none;filter:none;-webkit-transition:background .2s,opacity .2s;-moz-transition:background .2s,opacity .2s;-o-transition:background .2s,opacity .2s;-ms-transition:background .2s,opacity .2s;transition:background .2s,opacity .2s}
@@ -441,6 +441,7 @@ button,input[type=submit]{background:rojo;border:none;clear:both;color:#fff;curs
 @media only screen and (min-width:640px){.benefits-tabs ul{float:right}
 .benefits-img{display:block;float:left}
 .main ul{margin-left:45px}
+.projects-item.featured h4{font-size:4em}
 .footer-logo{float:left;width:auto;margin-top:10px}
 .footer-copyright{float:right;position:absolute;right:1em;top:0}
 .footer-links{text-align:center;width:500px;margin:0 auto}
