--- a/templates/frame/assets/stylus/main.styl
+++ b/templates/frame/assets/stylus/main.styl
@@ -440,8 +440,8 @@ button,input[type="submit"]
 		left 0
 		width 100%
 		height 100%
-		background rgba(0, 0, 0, 0)
-		opacity 0
+		background-color rgba(0, 0, 0, 0.5)//background rgba(0, 0, 0, 0)
+		opacity 1//opacity 0
 		transition background 0.5s 0.5s, opacity 0.5s 0.5s
 
 		&:before
@@ -450,23 +450,23 @@ button,input[type="submit"]
 			height 100%
 			vertical-align middle
 			margin-right -0.4em
-		&:hover
+		/*&:hover
 			background-color rgba(0, 0, 0, 0.5)
 			opacity 1
-			transition background 0.2s, opacity 0.2s
+			transition background 0.2s, opacity 0.2s*/
 
-			div///.projects-content
-				opacity 1
-				transition opacity 0.2s
+		div///.projects-content
+			opacity 1
+			transition opacity 0.2s
 
-			h4///.projects-title
-			p///.projects-description
-				opacity 1
-				transform translateZ(0px)
-			h4///.projects-title
-				transition opacity 0.5s, transform 0.5s
-			p///.projects-description
-				transition background-color 0.5s, opacity 0.5s 0.2s, transform 0.5s 0.2s
+		h4///.projects-title
+		p///.projects-description
+			opacity 1
+			transform translateZ(0px)
+		h4///.projects-title
+			transition opacity 0.5s, transform 0.5s
+		p///.projects-description
+			transition background-color 0.5s, opacity 0.5s 0.2s, transform 0.5s 0.2s
 
 	&-content
 		opacity 0
