--- a/templates/frame/assets/stylus/responsive.styl
+++ b/templates/frame/assets/stylus/responsive.styl
@@ -19,6 +19,28 @@
 			&.featured
 				h4
 					font-size 4em
+					
+		&-link
+			background rgba(0, 0, 0, 0)
+			opacity 0
+			
+			&:hover
+				background-color rgba(0, 0, 0, 0.5)
+				opacity 1
+				transition background 0.2s, opacity 0.2s
+
+				div///.projects-content
+					opacity 1
+					transition opacity 0.2s
+
+				h4///.projects-title
+				p///.projects-description
+					opacity 1
+					transform translateZ(0px)
+				h4///.projects-title
+					transition opacity 0.5s, transform 0.5s
+				p///.projects-description
+					transition background-color 0.5s, opacity 0.5s 0.2s, transform 0.5s 0.2s	
 	
 		
 	.footer
